--- a/leaders.html
+++ b/leaders.html
@@ -128,6 +128,14 @@
         <h3 class="quiz-title">§ 21. Советская Россия и СССР в 1917-1939 гг.</h3>
     </div>
 </div>
+<div class="quiz-card" onclick="showLeaderboard('paragraph_22')">
+    <div class="quiz-image">
+        <img src="images/quiz_covers/paragraph22_cover.jpg" alt="Белорусская государственность" class="quiz-cover-image">
+    </div>
+    <div class="quiz-content">
+        <h3 class="quiz-title">§ 22. Становление белорусской государственности</h3>
+    </div>
+</div>
             </div>
 
             <div class="admin-panel">
@@ -328,7 +336,11 @@ const quizDatabase = {
      paragraph_21: {
     title: "§ 21. Советская Россия и СССР в 1917-1939 гг.",
     coverImage: "images/quiz_covers/paragraph21_cover.jpg"
-}
+    },
+    paragraph_22: {
+        title: "§ 22. Становление белорусской государственности",
+        coverImage: "images/quiz_covers/paragraph22_cover.jpg"
+    }
 };
 
         const firebaseConfig = {
