--- a/quiz.html
+++ b/quiz.html
@@ -126,6 +126,14 @@
         <h3 class="quiz-title">§ 21. Советская Россия и СССР в 1917-1939 гг.</h3>
     </div>
 </div>
+<div class="quiz-card" onclick="startQuiz('paragraph_22')">
+    <div class="quiz-image">
+        <img src="images/quiz_covers/paragraph22_cover.jpg" alt="Белорусская государственность" class="quiz-cover-image">
+    </div>
+    <div class="quiz-content">
+        <h3 class="quiz-title">§ 22. Становление белорусской государственности</h3>
+    </div>
+</div>
             </div>
         </div>
 
@@ -140,10 +148,10 @@
                             <span id="progress-text">Вопрос 1/26</span>
                         </div>
                     </div>
-                    <div class="quiz-timer" id="quiz-timer">
-                        <span>⏱️</span>
-                        <span id="timer">0 сек</span>
-                    </div>
+<div class="quiz-timer" id="quiz-timer">
+    <span></span>
+    <span id="timer">0 сек</span>
+</div>
                 </div>
 
                 <div class="question-container">
