--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
     <title>Викторины</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="quiz-style.css">
+    <link rel="stylesheet" href="wheel.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
@@ -315,7 +316,7 @@
 <div id="wheel-modal" class="modal">
     <div class="modal-content wheel-modal-content">
         <div class="modal-header">
-            <h3>🎡 Колесо фортуны - 11<span id="selected-class">А</span></h3>
+            <h3>🎡 Колесо активностей - 11<span id="selected-class">А</span></h3>
             <span class="close-modal" onclick="closeWheelModal()">&times;</span>
         </div>
         <div class="wheel-container">
