--- a/quiz.html
+++ b/quiz.html
@@ -32,7 +32,7 @@
                 <div class="logo-icon">📜</div>
                 <div class="logo-text">
                     <h1>Викторины</h1>
-                    <p>11 класс - История и Обществоведение</p>
+                    <p>11 класс - История</p>
                 </div>
             </div>
             
